--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -28,54 +28,37 @@ Clustering is a data analysis task involving separating a data set into
 subgroups of related data. For example, we might use clustering to separate a data set of documents into groups that correspond to topics, a data set of human
 genetic information into groups that correspond to ancestral subpopulations, or
 a data set of online customers into groups that correspond to purchasing
-behaviours.  Once the data are separated we can, for example, use the subgroups
+behaviours.  Once the data are separated, we can, for example, use the subgroups
 to generate new questions about the data and follow up with a predictive
 modelling exercise. In this course, clustering will be used only for exploratory
-analysis, i.e., uncovering patterns in the data that we have.
-
+analysis, i.e., uncovering patterns in the data.
 Note that clustering is a fundamentally different kind of task than
-classification or regression. Most notably, both classification and regression
-are *supervised tasks* where there is a *predictive target* (a class label or
-value), and we have examples of past data with labels/values that help us
-predict those of future data. By contrast, clustering is an *unsupervised
-task*, as we are trying to understand and examine the structure of data without
-any labels to help us. This approach has both advantages and disadvantages.
-Clustering requires no additional annotation or input on the data; for example,
-it would be nearly impossible to annotate all the articles on Wikipedia with
-human-made topic labels, but we can still cluster the articles without this
-information to automatically find groupings corresponding to topics. 
+classification or regression. Most notably, both classification and regression are *supervised tasks* where there is a *predictive target* (a class label or value), and we have examples of past data with labels/values that help us predict those of future data. By contrast, clustering is an *unsupervised task*, as we are trying to understand and examine the structure of data without any labels to help us. This approach has both advantages and disadvantages. Clustering requires no additional annotation or input on the data. For example, it would be nearly impossible to annotate all the articles on Wikipedia with human-made topic labels. However, we can still cluster the articles without this information to find groupings corresponding to topics automatically. 
 
-However, because there is no predictive target, it is not as easy to evaluate
-the "quality" of a clustering.  With classification, we are able to use a test
-data set to assess prediction performance. In clustering, there is not a single
-good choice for evaluation. In this book, we will use visualization to ascertain
-the quality of a clustering, and leave rigorous evaluation for more advanced
-courses.  
+However, because there is no predictive target, it is not as easy to evaluate the "quality" of a clustering.  With classification, we can use a test data set to assess prediction performance. In clustering, there is not a single good choice for evaluation. In this book, we will use visualization to ascertain the quality of a clustering, and leave rigorous evaluation for more advanced courses.  
 
 > There are also so-called *semisupervised* tasks, where only some of the data
-> come with labels / annotations, but the vast majority don't. The goal
+> come with labels/annotations, but the vast majority don't. The goal
 > is to try to uncover underlying structure in the data that allows one to
-> guess the missing labels. This sort of task is very useful, for example, when one 
+> guess the missing labels. This sort of task is beneficial, for example, when one 
 > has an unlabelled data set that is too large to manually label, but one is willing to
 > provide a few informative example labels as a "seed" to guess the labels for all the data.
 
 
 **An illustrative example** 
 
-Here we will present an illustrative example using a simulated data set. Suppose 
-we have data with two variables measuring customer loyalty and 
-satisfaction, and we want to learn whether there are distinct "types"
-of customer. Understanding this might help us come up with better products or
+Here we will present an illustrative example using a simulated data set. Suppose we have data with two variables measuring customer loyalty and satisfaction, and we want to learn whether there are distinct "types"
+of customer. Understanding this might help us develop better products or
 promotions to improve our business in a data-driven way.
 
 ```{r 10-toy-example-data, echo = FALSE, message = FALSE, warning = FALSE}
 library(tidyverse)
 
 data <- read_csv("data/toy_penguins.csv") %>% 
-  mutate(cluster=as_factor(cluster))
+  mutate(cluster=as_factor(cluster)) %>% 
+  mutate_if(is.numeric, scale)
+
 penguin_data <- data %>% select(flipper_length_mm, bill_length_mm)
-penguin_data <- penguin_data %>% 
-  map_df(scale)
 
 ```
 
@@ -91,11 +74,10 @@ base <- ggplot(data, aes(x = flipper_length_mm, y = bill_length_mm)) +
 base
 ```
 
-Based on this visualization, we might suspect there are a few subtypes of customer,
-selected from combinations of high/low satisfaction and high/low loyalty. How
+Based on this visualization, we might suspect there are a few subtypes of penguins,
+selected from combinations of high/low flipper length and high/low bill length. How
 do we find this grouping automatically, and how do we pick the number of subtypes
-to look for? The
-way to rigorously separate the data into groups is to use a clustering algorithm.
+to look for? The way to rigorously separate the data into groups is to use a clustering algorithm.
 In this chapter, we will focus on the *K-means* algorithm, a widely-used
 and often very effective clustering method, combined with the *elbow method* for
 selecting the number of clusters. This procedure will separate the data into 
@@ -115,14 +97,14 @@ where we can easily visualize the clusters on a scatter plot, we can give
 human-made labels to the groups using their positions on
 the plot:
 
-- low loyalty and low satisfaction (<font color="#619CFF">blue cluster</font>),
-- high loyalty and low satisfaction (<font color="#F8766D">pink cluster</font>), 
-- and high loyalty and high satisfaction (<font color="#00BA38">green cluster</font>).
+- small flipper length and small bill length (<font color="#F8766D">pink cluster</font>), 
+- small flipper length and large bill length (<font color="#00BA38">green cluster</font>).
+- and large flipper length and large bill  length (<font color="#619CFF">blue cluster</font>).
 
-Once we have made these determinations, we can use them to inform our future business decisions,
-or to ask further questions about our data. For example, here we might notice based on our clustering
+Once we have made these determinations, we can use them to inform our species classifications,
+or to ask further questions about our data. **For example, here we might notice based on our clustering
 that there aren't any customers with high satisfaction but low loyalty, and generate new analyses
-or business strategies based on this information. 
+or business strategies based on this information.**
 
 ## K-means 
 
@@ -130,10 +112,12 @@ or business strategies based on this information.
 
 ```{r 10-toy-example-clus1, echo = FALSE, message = FALSE, warning = FALSE}
 library(tidyverse)
+
 #clus1 <- tibble(loyalty = c(7, 7.5, 8, 7, 8),
 #               csat = c(1, 1, 2, 2, 3),
 #               )
-clus1 <- head(penguin_data)
+clus1 <- filter(data, cluster == 2) %>% 
+  select(bill_length_mm, flipper_length_mm)
 
 #clus1_center <- clus1 %>% summarize(csat = mean(csat), loyalty = mean(loyalty))
 ```
@@ -152,16 +136,17 @@ Then we would compute the $x$ and $y$ variables, $\mu_x$ and $\mu_y$, of the clu
 
 $$\mu_x = \frac{1}{3}(x_1+x_2+x_3) \quad \mu_y = \frac{1}{3}(y_1+y_2+y_3).$$
 
-In the first cluster from the customer satisfaction/loyalty example, there 
-are 5 data points. These are shown with their cluster center 
-(`csat = 1.8` and `loyalty = 7.5`) highlighted below.
+In the first cluster from the example, there are `r nrow(clus1)` data points. These are shown with their cluster center 
+(``r paste("flipper_length_mm =", round(mean(clus1$flipper_length_mm),2))`` and ``r paste("bill_length_mm =", round(mean(clus1$bill_length_mm),2))``) highlighted below.
 
 ```{r 10-toy-example-clus1-center, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Cluster 1 from the toy example, with center highlighted."}
 base <- ggplot(clus1) +
   geom_point(aes(y = bill_length_mm, x = flipper_length_mm)) +
   labs(x = "Flipper Length (mm)", y = "Bill Length (mm)") +
-  xlim(c(min(clus1$flipper_length_mm) - 2, max(clus1$flipper_length_mm) + 2)) +
-  ylim(c(min(clus1$bill_length_mm) - 1, max(clus1$bill_length_mm) + 1)) +
+  xlim(c(min(clus1$flipper_length_mm) - 0.25*sd(clus1$flipper_length_mm), 
+         max(clus1$flipper_length_mm) + 0.25*sd(clus1$flipper_length_mm))) +
+  ylim(c(min(clus1$bill_length_mm) - 0.25*sd(clus1$bill_length_mm), 
+         max(clus1$bill_length_mm) + 0.25*sd(clus1$bill_length_mm))) +
   geom_point(aes(y = mean(bill_length_mm), x = mean(flipper_length_mm), colour="red", size=2.5)) +
   theme(legend.position = "none")
 base
@@ -173,20 +158,18 @@ In the 3-observation cluster example above, we would compute the WSSD $S^2$ via
 
 $$S^2 = \left((x_1 - \mu_x)^2 + (y_1 - \mu_y)^2\right) + \left((x_2 - \mu_x)^2 + (y_2 - \mu_y)^2\right) +\left((x_3 - \mu_x)^2 + (y_3 - \mu_y)^2\right).$$
 
-These distances are denoted by lines for the first cluster of the customer satisfaction/loyalty data example below. 
+These distances are denoted by lines for the first cluster of the penguin data example below. 
 
 ```{r 10-toy-example-clus1-dists, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Cluster 1 from the toy example, with distances to the center highlighted."}
 base <- ggplot(clus1) +
   geom_point(aes(y = bill_length_mm, x = flipper_length_mm)) +
   labs(x = "Flipper Length (mm)", y = "Bill Length (mm)") +
-#  xlim(c(0, 4)) +
-#  ylim(c(6, 9)) +
   theme(legend.position = "none")
 
 mn <- clus1 %>% summarize(flipper_length_mm = mean(flipper_length_mm), bill_length_mm=mean(bill_length_mm))
-for (i in 1:6) {
-  base <- base + geom_segment(x = unlist(mn[1, "flipper_length_mm"]), y = unlist(mn[1, "Bill Length (mm)"]),
-                           xend = unlist(clus1[i, "flipper_length_mm"]), yend = unlist(clus1[i, "Bill Length (mm)"]))
+for (i in 1:nrow(clus1)) {
+  base <- base + geom_segment(x = unlist(mn[1, "flipper_length_mm"]), y = unlist(mn[1, "bill_length_mm"]),
+                           xend = unlist(clus1[i, "flipper_length_mm"]), yend = unlist(clus1[i, "bill_length_mm"]))
 }
 base <- base + geom_point(aes(y = mean(bill_length_mm), x = mean(flipper_length_mm), colour="red", size=2.5)) 
 base
@@ -246,7 +229,7 @@ for (i in 1:4){
     
     #reassign labels
     dists <- rbind(centers, penguin_data) %>% 
-           select("flipper_length_mm", "Bill Length (mm)") %>%
+           select("flipper_length_mm", "bill_length_mm") %>%
            dist() %>%
            as.matrix()
     dists <- as_tibble(dists[-(1:nclus),1:nclus])
@@ -286,7 +269,7 @@ K-means, unlike the classification and regression models we studied in previous 
 For example, if we were unlucky and initialized K-means with the following labels:
 <center>
 ```{r 10-toy-kmeans-bad-init, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Random initialization of labels."}
-set.seed(9)
+set.seed(10)
 penguin_data["label"] = factor(sample(1:3, nrow(penguin_data), replace=T))
 
 plt_lbl <- ggplot(penguin_data, aes(y = bill_length_mm, x = flipper_length_mm, colour=label)) +
@@ -320,7 +303,7 @@ for (i in 1:5){
     
     #reassign labels
     dists <- rbind(centers, penguin_data) %>% 
-           select("flipper_length_mm", "Bill Length (mm)") %>%
+           select("flipper_length_mm", "bill_length_mm") %>%
            dist() %>%
            as.matrix()
     dists <- as_tibble(dists[-(1:nclus),1:nclus])
@@ -387,7 +370,7 @@ levels(clusters$k) <- c("1 Cluster", "2 Clusters", "3 Clusters", "4 Clusters", "
 p1 <- ggplot(assignments, aes(flipper_length_mm, bill_length_mm)) +
   geom_point(aes(color = .cluster, size = 3)) + 
   facet_wrap(~ k) +
-  labs(x = 'Customer satisfaction', y = 'bill_length_mm', colour = 'Cluster') +
+  labs(x = 'Flipper Length (mm)', y = 'Bill Length (mm)', colour = 'Cluster') +
   theme(text = element_text(size=20), legend.position = "none") +
   geom_point(data = clusters %>% mutate(flipper_length_mm = x2, bill_length_mm = x1), aes(fill = cluster), colour = "black", size = 5, shape = 21, stroke = 2)
 
@@ -406,9 +389,9 @@ p2 <- ggplot(clusterings, aes(x = k, y = tot.withinss)) +
         geom_point(size = 2) +
         geom_line() +
         #annotate(geom = "line", x = 4, y = 35, xend = 2.65, yend = 27, arrow = arrow(length = unit(2, "mm"))) +
-        geom_segment (aes (x = 4, y = 75, xend = 3.1, yend = 44), arrow = arrow (length = unit (0.2, "cm"))) +
-        annotate("text", x = 4.4, y = 83, label="Elbow", size = 7, colour = "blue") +
-        labs(x = "# Clusters", y = "Total WSSD") +
+        geom_segment (aes (x = 4, y = 17, xend = 3.1, yend = 6), arrow = arrow (length = unit (0.2, "cm"))) +
+        annotate("text", x = 4.4, y = 19, label="Elbow", size = 7, colour = "blue") +
+        labs(x = "Number of Clusters", y = "Total WSSD") +
         theme(text = element_text(size=20)) + 
         scale_x_continuous(breaks = 1:9)
 p2
@@ -450,8 +433,8 @@ seed to make the clustering reproducible.
 
 ```{r 10-kmeans}
 set.seed(1234)
-marketing_clust <- kmeans(penguin_data, centers = 3)
-marketing_clust
+penguin_clust <- kmeans(penguin_data, centers = 3)
+penguin_clust
 ```
 
 As you can see above, the clustering object returned by `kmeans` has a lot of information
@@ -464,7 +447,7 @@ frame, and returns a data frame with the data and the cluster assignments for
 each point:
 
 ```{r 10-plot-clusters-1}
-clustered_data <- augment(marketing_clust, penguin_data)
+clustered_data <- augment(penguin_clust, penguin_data)
 clustered_data
 ```
 
@@ -487,7 +470,7 @@ We can obtain the total WSSD (`tot.withinss`) from our
 clustering using `broom`'s `glance` function. For example:
 
 ```{r 10-glance}
-glance(marketing_clust)
+glance(penguin_clust)
 ```
 
 To calculate the total WSSD for a variety of Ks, we will
@@ -495,8 +478,8 @@ create a data frame with a column named `k` with rows containing
 each value of K we want to run K-means with (here, 1 to 9). 
 
 ```{r 10-choose-k-part1}
-marketing_clust_ks <- tibble(k = 1:9) 
-marketing_clust_ks
+penguin_clust_ks <- tibble(k = 1:9) 
+penguin_clust_ks
 ```
 
 Then we use `map` to apply the `kmeans` function to each
@@ -513,23 +496,23 @@ unlike other functions you've seen so far (`kmeans`, `select`, etc).
 To do this we will write our map statement like this:
 
 ```
-map(marketing_clust_ks, function(k) kmeans(penguin_data, k))
+map(penguin_clust_ks, function(k) kmeans(penguin_data, k))
 ```
 
 The anonymous function in the above call is `function(k) kmeans(penguin_data, k)`.
 This function takes a single argument (`k`) and evaluates `kmeans(penguin_data, k)`.
 Since `k` is the *first* (and only) argument to the function, we can use `map` just
 like we did before! The rest of the call above does just that -- it passes each row of
-`marketing_clust_ks` to our anonymous function.
+`penguin_clust_ks` to our anonymous function.
 
 Below, we execute this `map` call inside of a `mutate` call on the 
-`marketing_clust_ks` data frame and get a list column that contains a K-means
+`penguin_clust_ks` data frame and get a list column that contains a K-means
 clustering object for each value of K we had:
 
 ```{r 10-choose-k-part2}
-marketing_clust_ks <- tibble(k = 1:9) %>%
-  mutate(marketing_clusts = map(k, function(ks) kmeans(penguin_data, ks)))
-marketing_clust_ks
+penguin_clust_ks <- tibble(k = 1:9) %>%
+  mutate(penguin_clusts = map(k, function(ks) kmeans(penguin_data, ks)))
+penguin_clust_ks
 ```
 
 Next, we use `map` again to apply `glance` to each of the K-means
@@ -539,10 +522,10 @@ complex data frame with 3 columns, one for K, one for the
 K-means clustering objects, and one for the clustering statistics:
 
 ```{r 10-choose-k-part3}
-marketing_clust_ks <- tibble(k = 1:9) %>%
-  mutate(marketing_clusts = map(k, ~kmeans(penguin_data, .x)),
-         glanced = map(marketing_clusts, glance)) 
-marketing_clust_ks
+penguin_clust_ks <- tibble(k = 1:9) %>%
+  mutate(penguin_clusts = map(k, ~kmeans(penguin_data, .x)),
+         glanced = map(penguin_clusts, glance)) 
+penguin_clust_ks
 ```
 
 Finally we extract the total WSSD from the `glanced` column. Given that each 
@@ -550,7 +533,7 @@ item in this column is a data frame, we will need to use the `unnest` function
 to unpack the data frames into simpler column data types. 
 
 ```{r 10-get-total-within-sumsqs}
-clustering_statistics <- marketing_clust_ks %>%
+clustering_statistics <- penguin_clust_ks %>%
   unnest(glanced)
 
 clustering_statistics
@@ -578,11 +561,11 @@ and found a bad clustering! We can help prevent finding a bad clustering by tryi
 few different random initializations via the `nstart` argument (here we use 10 restarts). 
 
 ```{r 10-choose-k-nstart, fig.height = 4, fig.width = 4.35}
-marketing_clust_ks <- tibble(k = 1:9) %>%
-  mutate(marketing_clusts = map(k, ~kmeans(penguin_data, nstart = 10, .x)),
-         glanced = map(marketing_clusts, glance)) 
+penguin_clust_ks <- tibble(k = 1:9) %>%
+  mutate(penguin_clusts = map(k, ~kmeans(penguin_data, nstart = 10, .x)),
+         glanced = map(penguin_clusts, glance)) 
 
-clustering_statistics <- marketing_clust_ks %>%
+clustering_statistics <- penguin_clust_ks %>%
   unnest(glanced)
 
 elbow_plot <- ggplot(clustering_statistics, aes(x = k, y = tot.withinss)) +
