reading in unscaled data

--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -413,12 +413,12 @@ We show an example of how to use this function
 below using the data in this chapter:
 
 ```{r 10-get-unscaled-data, echo = FALSE, message = FALSE, warning = FALSE}
-unscaled_data <- read_csv('data/toy_penguins.csv') %>%
-	mutate(cluster=as_factor(cluster)) %>% 
+unscaled_data <- read_csv('data/penguins.csv') %>%
   select(bill_length_mm, flipper_length_mm)
 ```
 
 ```{r 10-mapdf-scale-data}
+unscaled_data
 scaled_data <- map_df(unscaled_data, scale)
 scaled_data
 ```
@@ -433,7 +433,7 @@ seed to make the clustering reproducible.
 
 ```{r 10-kmeans}
 set.seed(1234)
-penguin_clust <- kmeans(penguin_data, centers = 3)
+penguin_clust <- kmeans(scaled_data, centers = 3)
 penguin_clust
 ```
 
@@ -447,7 +447,7 @@ frame, and returns a data frame with the data and the cluster assignments for
 each point:
 
 ```{r 10-plot-clusters-1}
-clustered_data <- augment(penguin_clust, penguin_data)
+clustered_data <- augment(penguin_clust, unscaled_data)
 clustered_data
 ```
 
@@ -460,7 +460,7 @@ cluster_plot <- ggplot(clustered_data,
                        aes(x = flipper_length_mm, y = bill_length_mm, colour = .cluster), 
                        size=2) +
   geom_point() +
-  labs(x = 'Customer satisfaction', y = 'bill_length_mm', colour = 'Cluster')
+  labs(x = 'Flipper Length (mm)', y = 'Bill Length (mm)', colour = 'Cluster')
 cluster_plot
 ```
 
