adding some description of the data

--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -47,7 +47,7 @@ However, because there is no predictive target, it is not as easy to evaluate th
 
 **An illustrative example** 
 
-Here we will present an illustrative example using a simulated data set. Suppose we have data with two variables measuring customer loyalty and satisfaction, and we want to learn whether there are distinct "types"
+Here we will present an illustrative example using a data set originally from [{palmerpenguins} R data package](https://allisonhorst.github.io/palmerpenguins/). This data set was collected by Dr. Kristen Gorman and the Palmer Station, Antarctica LTER, a member of the Long Term Ecological Research Network [@cancensus2016]. Suppose we have data with two variables measuring customer loyalty and satisfaction, and we want to learn whether there are distinct "types"
 of customer. Understanding this might help us develop better products or
 promotions to improve our business in a data-driven way.
 
