--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -41,6 +41,23 @@ another example, we could try to use the size of a house to
 predict its sale price. Both of these response variables---race time and sale price---are 
 numerical, and so predicting them given past data is considered a regression problem.
 
+Just like in the classification setting, there are many possible methods that we can use 
+to predict numerical response variables. In this chapter we will
+focus on the **K-nearest neighbours** algorithm, and in the next chapter
+we will study **linear regression**.
+In your future studies, you might encounter regression trees, splines,
+and general local regression methods; see the additional resources
+section at the end of the next chapter for where to begin learning more about
+these other methods. 
+
+Many of the concepts from classification map over to the setting of regression. For example, 
+a regression model predicts a new observation's response variable based on the response variables
+for similar observations in the data set of past observations. When building a regression model,
+we first split the data into training and test sets, in order to ensure that we assess the performance
+of our method on observations not seen during training. And finally, we can use cross-validation to evaluate different
+choices of model parameters (e.g., K in a K-nearest neighbours model). The major difference
+is that we are now predicting numerical variables instead of categorical variables.
+
 > You can usually tell whether a variable is numerical or categorical---and therefore whether you
 > need to perform regression or classification---by taking two response variables X and Y from your
 > data, and asking the question "is response variable X *more* than response variable Y?"
@@ -50,14 +67,6 @@ numerical, and so predicting them given past data is considered a regression pro
 > Be careful when applying this heuristic, though: sometimes a categorical variables will be encoded as
 > numbers in your data (e.g. "1" represents "benign", and "0" represents "malignant"). In these cases
 > you have to ask the question about the *meaning* of the labels ("benign" and "malignant"), not their values ("1" and "0"). 
-
-Many of the concepts from classification map over to the setting of regression. For example, 
-a regression model predicts a new observation's response variable based on the response variables
-for similar observations in the data set of past observations; when building a regression model,
-we first split the data into training and test sets, in order to ensure that we assess the performance
-of our method on observations not seen during training; and we can use cross-validation to evaluate different
-choices of model parameters (e.g., K in a K-nearest neighbours model). The major difference
-is that we are now predicting numerical variables instead of categorical variables.
 
 ## Exploring a labelled data set
 
