minor tweaks to classification I

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -220,9 +220,7 @@ resulting in values of, say, 1 and 1. Could we use this information to classify
 that observation as benign or malignant? What about a new observation with
 perimeter value of -1 and concavity value of -0.5? What about 0 and 1? It seems
 like the *prediction of an unobserved label* might be possible, based on our
-visualization.  In order to actually do this computationally in practice, we
-will need a classification algorithm; here we will use the K-nearest neighbour
-classification algorithm.
+visualization.  
 
 ## Classification with K-nearest neighbours
 
@@ -255,8 +253,12 @@ attrs <- c("Perimeter", "Concavity")
 my_distances <- table_with_distances(cancer[, attrs], new_point)
 neighbours <- cancer[order(my_distances$Distance), ]
 ```
-To predict the label of a new observation, i.e., classify it as either benign
-or malignant, the K-nearest neighbour classifier generally finds the $K$
+
+In order to actually make predictions for new observations in practice, we
+will need a classification algorithm; here we will use the K-nearest neighbour
+classification algorithm.
+To predict the label of a new observation (here, classify it as either benign
+or malignant), the K-nearest neighbours classifier generally finds the $K$
 "nearest" or "most similar" observations in our training set, and then uses
 their diagnoses to make a prediction for the new observation's diagnosis. To
 illustrate this concept, we will walk through an example.  Suppose we have a
@@ -439,10 +441,10 @@ show the calculation of distance for each of the 5 closest points.
 -----------------     ----------------- ----------------- 
 
 
-**More than two explanatory variables**
+**More than two predictor variables**
 
-Although the above description is directed toward two explanatory variables /
-predictors, exactly the same K-nearest neighbour algorithm applies when you
+Although the above description is directed toward two predictor variables, 
+exactly the same K-nearest neighbour algorithm applies when you
 have a higher number of explanatory variables (i.e., a higher-dimensional
 predictor space).  Each explanatory variable/predictor can give us new
 information to help create our classifier.  The only difference is the formula
@@ -454,7 +456,7 @@ Before, we added up the squared difference between each of our (two) variables,
 and then took the square root; now we will do the same, except for *all* of our
 $m$ variables.  In other words, the distance formula becomes
 
-$$Distance = \sqrt{(u_{1} -v_{1})^2 + (u_{2} - v_{2})^2 + \dots + (u_{m} - v_{m})^2}$$
+$$Distance = \sqrt{(u_{1} -v_{1})^2 + (u_{2} - v_{2})^2 + \dots + (u_{m} - v_{m})^2}.$$
 
 
 ```{r 05-more, echo = FALSE, fig.cap = "3D scatterplot of symmetry, concavity and perimeter"}
