inserted some template text about variable selection for knn in classification II...

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -517,6 +517,31 @@ grid.arrange(grobs = plots)
 ```
 </center>
 
+### Predictor selection
+
+So if we can use more than two predictor variables in K-nearest neighbour classification,
+shouldn't we always just use *all* of our variables? Unfortunately, K-nearest neighbours
+does not necessarily the perf more variables it is not quite that simple.
+
+
+We were quite fortunate in our initial exploration to find two variables (perimeter and concavity)
+that, together, seem to separate benign and malignant observations into two distinct regions.
+But what should we do if we cannot immediately find such a nice collection of variables?
+Well, sometimes it is just a fact that the variables in the data do not have enough of 
+a relationship with the response variable to provide accurate predictions. For example,
+in the breast cancer image data, if the only available predictor was "patient's favourite icecream flavour",
+we likely would have little hope of using that variable to predict the response 
+(barring any future incredible scientific discoveries about the relationship between icecream preference
+and cancer diagnosis). In cases like these, the only option is to go and measure more useful variables.
+
+There are, however, a wide variety of cases where the predictor variables *do* have a 
+meaningful relationship with the response variable, but that relationship is not obvious
+if you just plot the variables directly. In these cases, you will need to use some of the wrangling
+tools from previous chapters to manipulate the variables into a useful form, which is sometimes
+known as *feature engineering*.
+
+
+
 ## Splitting data
 
 **Shuffling:** When we split the data into train, test, and validation sets, we
@@ -559,14 +584,14 @@ The overall workflow for performing K-nearest neighbour classification using `ti
 
 **Strengths:**
 
-1. Simple and easy to understand
-2. No assumptions about what the data must look like 
-3. Works easily for binary (two-class) and multi-class (> 2 classes) classification problems
+1. Simple, intuitive algorithm
+2. Few assumptions about what the data must look like 
+3. Works for binary (two-class) and multi-class (> 2 classes) classification problems
 
 **Weaknesses:**
 
-1. As data gets bigger and bigger, K-nearest neighbour gets slower and slower, quite quickly
-2. Does not perform well with a large number of predictors
+1. As the training data gets larger, K-nearest neighbours becomes very slow
+2. May not perform well with a large number of predictors
 3. Does not perform well when classes are imbalanced (when many more observations are in one of the classes compared to the others)
 
 ## Additional resources
